--- a/Week-02-Data-Viz-EDA/Exercise_MK.ipynb
+++ b/Week-02-Data-Viz-EDA/Exercise_MK.ipynb
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "as Engine Hp incresae, highway MPG decreae \n"
+      "as Engine Hp incresae, highway MPG decrease \n"
      ]
     }
    ],
@@ -1162,7 +1162,18 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<seaborn.axisgrid.PairGrid at 0x147efb010>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using a pairplot, display all of the linear relationship.\n",
     "\n",
