--- a/Week-02-Data-Viz-EDA/Exercise_MK.ipynb
+++ b/Week-02-Data-Viz-EDA/Exercise_MK.ipynb
@@ -1166,7 +1166,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x147efb010>"
+       "<seaborn.axisgrid.PairGrid at 0x16c27feb0>"
       ]
      },
      "execution_count": 23,
@@ -1177,7 +1177,7 @@
    "source": [
     "# Using a pairplot, display all of the linear relationship.\n",
     "\n",
-    "sns.pairplot(df)"
+    "#sns.pairplot(df)"
    ]
   },
   {
